// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`async.sql > line 6 1`] = `
[
  "SELECT pg_notify('notify_async1','sample message1')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 17,
                            "sval": {
                              "sval": "notify_async1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 33,
                            "sval": {
                              "sval": "sample message1",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_notify",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`async.sql > line 16 1`] = `
[
  "NOTIFY notify_async2",
  {
    "stmts": [
      {
        "stmt": {
          "NotifyStmt": {
            "conditionname": "notify_async2",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`async.sql > line 23 1`] = `
[
  "SELECT pg_notification_queue_usage()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_notification_queue_usage",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
